--- a/index.html
+++ b/index.html
@@ -1,173 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ansh Sachdeva</title>
-    <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/17d281e3be.js" crossorigin="anonymous"></script>
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://kit.fontawesome.com/17d281e3be.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
     <!-- landing section -->
 
     <div id="header">
-        <div class="container">
-            <nav>
-                <img src="images/logo.png" class="logo">
-                <ul id="sidemenu">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Projects</a></li>
-                    <li><a href="#">Contact</a></li>
-                    <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
-                </ul>
-                <i class="fa-solid fa-bars" onclick="openmenu()"></i>
-            </nav>
-            <div class="header-text">
-                <p>Web Developer</p>
-                <h1>Hi, I'm <span> Ansh </span> Sachdeva, <br> an IT Undergrad</h1>
-            </div>
+      <div class="container">
+        <nav>
+          <img src="images/logo.png" class="logo" />
+          <ul id="sidemenu">
+            <li><a href="#header">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#portfolio">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+            <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
+          </ul>
+          <i class="fa-solid fa-bars" onclick="openmenu()"></i>
+        </nav>
+        <div class="header-text">
+          <p>Web Developer</p>
+          <h1>
+            Hi, I'm <span> Ansh </span> Sachdeva, <br />
+            an IT Undergrad
+          </h1>
         </div>
+      </div>
     </div>
-    
+
     <!-- about section -->
 
     <div id="about">
-        <div class="container">
-            <div class="row">
-                <div class="about-col-1">
-                    <img src="images/user.png">
-                </div>
-                <div class="about-col-2">
-                    <h1 class="sub-title">About Me</h1>
-                    <p>I'm a final year student at Bharati Vidyapeeth's College of Engineering, specializing in B.Tech in Information Technology. I'm a web developer and programmer, with a knack for C++, and I'm also a gaming enthusiast. As I approach graduation, I'm gearing up to make waves in the tech world as a Software Engineer.</p>
+      <div class="container">
+        <div class="row">
+          <div class="about-col-1">
+            <img src="images/user.png" />
+          </div>
+          <div class="about-col-2">
+            <h1 class="sub-title">About Me</h1>
+            <p>
+              I'm a final year student at Bharati Vidyapeeth's College of
+              Engineering, specializing in B.Tech in Information Technology. I'm
+              a web developer and programmer, with a knack for C++, and I'm also
+              a gaming enthusiast. As I approach graduation, I'm gearing up to
+              make waves in the tech world as a Software Engineer.
+            </p>
 
-                    <div class="tab-titles">
-                        <p class="tab-links active-link" onclick="opentab('skills')">Skills</p>
-                        <p class="tab-links" onclick="opentab('experience')">Experience</p>
-                        <p class="tab-links" onclick="opentab('education')">Education</p>
-                    </div>
-
-                    <div class="tab-contents active-tab" id="skills">
-                        <ul>
-                            <li><span>Programming</span><br>Data Structures in C++</li>
-                            <li><span>Web Development</span><br>Versed with web technologies</li>
-                            <li><span>Database Management</span><br>SQL, NoSQL databases like MongoDB</li>
-                        </ul>
-                    </div>
-
-                    <div class="tab-contents" id="experience">
-                        <ul>
-                            <li><span>August 2023 - Present</span><br>Frontend Web Development Intern at AHODS Technologies</li>
-                            <li><span>July 2022 - August 2022</span><br>Summer Intern at International Programmes, IIT Delhi</li>
-                        </ul>
-                    </div>
-
-                    <div class="tab-contents" id="education">
-                        <ul>
-                            <li><span>2020 - Present</span><br>B.Tech in IT from Bharati Vidyapeeth's College of Engineering</li>
-                            <li><span>2020</span><br>Senior Secondary Education from Ryan International School</li>
-                            <li><span>2018</span><br>Secondary Education from Ryan International School</li>
-                        </ul>
-                    </div>
-                </div>
+            <div class="tab-titles">
+              <p class="tab-links active-link" onclick="opentab('skills')">
+                Skills
+              </p>
+              <p class="tab-links" onclick="opentab('experience')">
+                Experience
+              </p>
+              <p class="tab-links" onclick="opentab('education')">Education</p>
             </div>
+
+            <div class="tab-contents active-tab" id="skills">
+              <ul>
+                <li><span>Programming</span><br />Data Structures in C++</li>
+                <li>
+                  <span>Web Development</span><br />Versed with web technologies
+                </li>
+                <li>
+                  <span>Database Management</span><br />SQL, NoSQL databases
+                  like MongoDB
+                </li>
+              </ul>
+            </div>
+
+            <div class="tab-contents" id="experience">
+              <ul>
+                <li>
+                  <span>August 2023 - Present</span><br />Frontend Web
+                  Development Intern at AHODS Technologies
+                </li>
+                <li>
+                  <span>July 2022 - August 2022</span><br />Summer Intern at
+                  International Programmes, IIT Delhi
+                </li>
+              </ul>
+            </div>
+
+            <div class="tab-contents" id="education">
+              <ul>
+                <li>
+                  <span>2020 - Present</span><br />B.Tech in IT from Bharati
+                  Vidyapeeth's College of Engineering
+                </li>
+                <li>
+                  <span>2020</span><br />Senior Secondary Education from Ryan
+                  International School
+                </li>
+                <li>
+                  <span>2018</span><br />Secondary Education from Ryan
+                  International School
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- Project Section -->
 
     <div id="portfolio">
-        <div class="container">
-            <h1 class="sub-title">My Projects</h1>
-            <div class="work-list">
-                <div class="work">
-                    <img src="images/work-1.png">
-                    <div class="layer">
-                        <h3>NotesVault</h3>
-                        <p>A user-focused platform for storing and managing notes, offering convenient CRUD operations.</p>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="images/work-2.jpg">
-                    <div class="layer">
-                        <h3>NewsGen</h3>
-                        <p>Your go-to website for concise and up-to-date news from around the world.</p>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                    </div>
-                </div>
-                <div class="work">
-                    <img src="images/work-3.jpg">
-                    <div class="layer">
-                        <h3>360 Virtual Tour of IIT Delhi</h3>
-                        <p>This project gives potential international
-                            students an opportunity to explore the institute's environment virtually.</p>
-                        <a href="#"><i class="fa-brands fa-github"></i></a>
-                    </div>
-                </div>
+      <div class="container">
+        <h1 class="sub-title">My Projects</h1>
+        <div class="work-list">
+          <div class="work">
+            <img src="images/work-1.png" />
+            <div class="layer">
+              <h3>NotesVault</h3>
+              <p>
+                A user-focused platform for storing and managing notes, offering
+                convenient CRUD operations.
+              </p>
+              <a href="https://github.com/AnshS04/NotesVault-MERN"
+                ><i class="fa-brands fa-github"></i
+              ></a>
             </div>
+          </div>
+          <div class="work">
+            <img src="images/work-2.jpg" />
+            <div class="layer">
+              <h3>NewsGen</h3>
+              <p>
+                Your go-to website for concise and up-to-date news from around
+                the world.
+              </p>
+              <a href="https://github.com/AnshS04/NewsGen-React"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+            </div>
+          </div>
+          <div class="work">
+            <img src="images/work-3.jpg" />
+            <div class="layer">
+              <h3>360 Virtual Tour of IIT Delhi</h3>
+              <p>
+                This project gives potential international students an
+                opportunity to explore the institute's environment virtually.
+              </p>
+              <a href="https://international.iitd.ac.in/campus-tour/"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+            </div>
+          </div>
         </div>
+      </div>
     </div>
 
     <!-- contact form -->
 
     <div id="contact">
-        <div class="container">
-            <div class="row">
-                <div class="contact-left">
-                    <h1 class="sub-title">Contact Me</h1>
-                    <p><i class="fa-solid fa-paper-plane"></i> sachdevaansh2002@gmail.com</p>
-                    <p><i class="fa-solid fa-square-phone"></i> +91 8285226225</p>
-                    <div class="social-icons">
-                        <a href="https://www.linkedin.com/in/theanshsachdeva/"><i class="fa-brands fa-linkedin"></i></a>
-                        <a href="https://github.com/AnshS04"><i class="fa-brands fa-github"></i></a>
-                        <a href="https://leetcode.com/Ansh_Sachdeva/"><i class="fa-solid fa-code"></i></a>
-                        <a href="https://www.instagram.com/anshhsachdeva/"><i class="fa-brands fa-instagram"></i></a>
-                    </div>
-                    <a href="images/Ansh_Sachdeva_Resume.pdf" download class="btn">Download CV</a>
-                </div>
-                <div class="contact-right">
-                    <form>
-                        <input type="text" name="Name" placeholder="Your name" required>
-                        <input type="email" name="Email" placeholder="Your email" required>
-                        <textarea name="Message" rows="6" placeholder="Your message"></textarea>
-                        <button type="submit" class="btn">Submit</button>
-                    </form>
-                </div>
+      <div class="container">
+        <div class="row">
+          <div class="contact-left">
+            <h1 class="sub-title">Contact Me</h1>
+            <p>
+              <i class="fa-solid fa-paper-plane"></i> sachdevaansh2002@gmail.com
+            </p>
+            <p><i class="fa-solid fa-square-phone"></i> +91 8285226225</p>
+            <div class="social-icons">
+              <a href="https://www.linkedin.com/in/theanshsachdeva/"
+                ><i class="fa-brands fa-linkedin"></i
+              ></a>
+              <a href="https://github.com/AnshS04"
+                ><i class="fa-brands fa-github"></i
+              ></a>
+              <a href="https://leetcode.com/Ansh_Sachdeva/"
+                ><i class="fa-solid fa-code"></i
+              ></a>
+              <a href="https://www.instagram.com/anshhsachdeva/"
+                ><i class="fa-brands fa-instagram"></i
+              ></a>
             </div>
+            <a href="images/Ansh_Sachdeva_Resume.pdf" download class="btn"
+              >Download CV</a
+            >
+          </div>
+          <div class="contact-right">
+            <form name="submit-to-google-sheet">
+              <input type="text" name="Name" placeholder="Your name" required />
+              <input
+                type="email"
+                name="Email"
+                placeholder="Your email"
+                required
+              />
+              <textarea
+                name="Message"
+                rows="6"
+                placeholder="Your message"
+              ></textarea>
+              <button type="submit" class="btn">Submit</button>
+            </form>
+            <span id="msg"></span>
+          </div>
         </div>
-        <div class="copyright">
-            <img src="images/logo.png" class="logo">
-        </div>
+      </div>
+      <div class="copyright">
+        <img src="images/logo.png" class="logo" />
+      </div>
     </div>
 
     <script>
-        var tablinks = document.getElementsByClassName("tab-links")
-        var tabcontents = document.getElementsByClassName("tab-contents")
+      var tablinks = document.getElementsByClassName("tab-links");
+      var tabcontents = document.getElementsByClassName("tab-contents");
 
-        function opentab(tabname) {
-            for(tablink of tablinks) {
-                tablink.classList.remove("active-link");
-            }
-            
-            for(tabcontent of tabcontents) {
-                tabcontent.classList.remove("active-tab");
-            }
-
-            event.currentTarget.classList.add("active-link");
-            document.getElementById(tabname).classList.add("active-tab");
+      function opentab(tabname) {
+        for (tablink of tablinks) {
+          tablink.classList.remove("active-link");
         }
+
+        for (tabcontent of tabcontents) {
+          tabcontent.classList.remove("active-tab");
+        }
+
+        event.currentTarget.classList.add("active-link");
+        document.getElementById(tabname).classList.add("active-tab");
+      }
     </script>
 
     <script>
-        var sidemenu = document.getElementById("sidemenu");
-        function openmenu() {
-            sidemenu.style.right = "0";
-        }
-        function closemenu() {
-            sidemenu.style.right = "-200px";
-        }
+      var sidemenu = document.getElementById("sidemenu");
+      function openmenu() {
+        sidemenu.style.right = "0";
+      }
+      function closemenu() {
+        sidemenu.style.right = "-200px";
+      }
     </script>
-</body>
+
+    <script>
+      const scriptURL = "https://script.google.com/macros/s/AKfycbxWoN4uMrgfzp5H4tN3oGHyEP8wlODUpGQFiGTmmOduwyStUrN1JeGvhY48_br30m19/exec";
+      const form = document.forms["submit-to-google-sheet"];
+      const msg = document.getElementById("msg")
+
+      form.addEventListener("submit", (e) => {
+        e.preventDefault();
+        fetch(scriptURL, { method: "POST", body: new FormData(form) })
+          .then((response) => {
+            msg.innerHTML = "Message sent successfully!";
+            setTimeout(function() {
+                msg.innerHTML = "";
+            }, 5000)
+            form.reset()
+          })
+          .catch((error) => console.error("Error!", error.message));
+      });
+    </script>
+  </body>
 </html>
