--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
             <div class="tab-contents" id="experience">
               <ul>
                 <li>
-                  <span>August 2023 - Present</span><br />Frontend Web
-                  Development Intern at AHODS Technologies
+                  <span>March 2024 - Present</span><br />SDE intern at Truminds
                 </li>
                 <li>
                   <span>July 2022 - August 2022</span><br />Summer Intern at
